syntax = "proto2";

package im.actor.server;

message FileLocation {
    required int64 file_id = 1;
    required int64 access_hash = 2;
}

message AvatarImage {
    required FileLocation file_location = 1;
    required int32 width = 2;
    required int32 height = 3;
    required int64 file_size = 4;
}

message Avatar {
    optional AvatarImage small = 1;
    optional AvatarImage large = 2;
    optional AvatarImage full = 3;
}